[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/Global.gd" type="Script" id=1]
[ext_resource path="res://audio/wush.ogg" type="AudioStream" id=2]
[ext_resource path="res://audio/saving_grace.ogg" type="AudioStream" id=3]
[ext_resource path="res://resources/save_symbol.tres" type="Texture" id=5]
[ext_resource path="res://fonts/PrStart.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://shader/cyber.gdshader" type="Shader" id=7]
[ext_resource path="res://audio/big_bad_evil_guy.ogg" type="AudioStream" id=8]

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 7 )
shader_param/color = Color( 0, 1, 0, 1 )
shader_param/offset = 0
shader_param/d = 16
shader_param/strength = 1
shader_param/duration = 3.0
shader_param/progress = 0.0

[sub_resource type="DynamicFont" id=13]
size = 4
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=15]
size = 2
font_data = ExtResource( 6 )

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float cutoff_r : hint_range(0.0, 1.0);
uniform float cutoff_l : hint_range(0.0, 1.0);

void fragment()
{
	if(UV.x < cutoff_l || cutoff_r < UV.x) {
		COLOR = vec4(COLOR.rgb, 0.0);
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/cutoff_r = 1.0
shader_param/cutoff_l = 1.0

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WushSfx:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/CyberEffect:material:shader_param/progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionLayer/FadeTransition:material:shader_param/cutoff_r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TransitionLayer/FadeTransition:material:shader_param/cutoff_l")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WushSfx:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionLayer/FadeTransition:material:shader_param/cutoff_l")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TransitionLayer/FadeTransition:material:shader_param/cutoff_r")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CyberEffect:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "cyber_in"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CyberEffect:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5 ]
}

[sub_resource type="Animation" id=12]
resource_name = "cyber_out"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CyberEffect:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 1.0 ]
}

[node name="Global" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="CyberEffect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="SaveMsg" type="ColorRect" parent="UILayer"]
visible = false
anchor_right = 1.0
margin_bottom = 16.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/SaveMsg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_right = -16.0

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/SaveMsg/HBoxContainer"]
margin_right = 108.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2
alignment = 1

[node name="Label3" type="Label" parent="UILayer/SaveMsg/HBoxContainer/VBoxContainer"]
margin_right = 108.0
margin_bottom = 10.0
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 13 )
text = "Saving a lot of data...
Don't turn the game off!"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/SaveMsg/HBoxContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 108.0
margin_bottom = 15.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="UILayer/SaveMsg/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 18.0
margin_bottom = 3.0
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 14 )
text = "> Saving "
valign = 1

[node name="SaveableName" type="Label" parent="UILayer/SaveMsg/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 26.0
margin_bottom = 3.0
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 15 )
text = "Name"
valign = 1

[node name="TextureRect" type="TextureRect" parent="UILayer/SaveMsg/HBoxContainer"]
margin_left = 112.0
margin_right = 128.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="TransitionLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="FadeTransition" type="ColorRect" parent="TransitionLayer"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )

[node name="CyberAnim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/cyber_in = SubResource( 11 )
anims/cyber_out = SubResource( 12 )

[node name="WushSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Music" type="Node" parent="."]

[node name="BlobbyTheSavior" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 3 )
volume_db = -6.0

[node name="BigBadEvilGuy" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 8 )
volume_db = -6.0
